tests/fixtures/invalid/int_mod_none.py
# Cannot modulo Int and None
x: int = 1 % None
